# chess-project

./: .gitignore  CHANGELOG.md  match_trfn.sql
backend/: .env.example  Dockerfile  ddl  ddl.sql  dml  dml.sql  dml2.sql  docker-compose.yml  main.py  match_trfn.sql  package-lock.json  pyproject.toml  requirements.txt  utils.py
backend/db/: database.py  queries.py
backend/models/: account.py  game.py  match.py
backend/routers/: admin.py  auth.py  lobby.py  match.py  mode.py  seek.py  social.py  user.py
backend/schemas/match/: requests.py  responses.py
backend/schemas/mode/: responses.py
backend/schemas/seek/: requests.py
chess-project/: README.md  index.html  package-lock.json  package.json
chess-project/src/: App.jsx  index.css  main.jsx
chess-project/src/components/: Dashboard.jsx  Friends.jsx  GameBoard.jsx  Lobby.jsx  Login.jsx  MainContent.jsx  Profile.jsx  Sidebar.jsx  SignUp.jsx  friends.css  gameboard.css  profile.css  signup.css
chess-project/src/components/AdminBans/: AdminBans.jsx  adminbans.css
chess-project/src/components/AdminDashboard/: Dashboard.jsx  dashboard.css
chess-project/src/components/AdminLobby/: Lobby.jsx  lobby.css
chess-project/src/components/AdminLogs/: AdminLogs.jsx
chess-project/src/components/AdminMainContent/: MainContent.jsx
chess-project/src/components/AdminSideBar/: Sidebar.jsx  sidebar.css
chess-project/src/components/Archive/: Archive.jsx  archive.css
chess-project/src/components/Dashboard/: Dashboard.jsx
chess-project/src/components/GameBoard/: GameBoard.jsx  gameboard.css
(+15 files in other folders)
